<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/top250Movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/top_250_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/top250Shows"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/top_250_tv_shows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top250Movies"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_what_you_want_to_see_today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/mostPopularMovies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/most_popular_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top250Shows"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:background="@color/colorAccent"/>
    <Button
        android:id="@+id/mostPopularShows"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/most_popular_shows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostPopularMovies"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:background="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>